// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0,"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0,"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Role of 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0,"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Roles of 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0,"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1,"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1,"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Role of 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1,"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Roles of 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1,"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12,"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12,"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Role of 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12,"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Roles of 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12,"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Repository permissions for 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null,"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null,"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Role of 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null,"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Roles of 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null,"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Role of 1 user has been manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            Roles of 12 users are manually updated on DeepSource. This will be affected by the sync.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {} 1`] = `
"<zmodal-stub title=\\"Confirm and sync access settings\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"mb-2.5 text-sm leading-6 text-vanilla-300\\">
        This operation will sync your team's access control settings and member permissions from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Roles of some team members can get updated on DeepSource. This may affect the number
              of seats your team is occupying on DeepSource.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Direct collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override manual changes to roles and permissions on DeepSource\\" size=\\"small\\" value=\\"true\\" class=\\"cursor-pointer border-t border-ink-200 pt-3 text-vanilla-400\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;
